--- a/embed_model/Dockerfile
+++ b/embed_model/Dockerfile
@@ -4,11 +4,10 @@ FROM ollama/ollama:0.9.6
 ARG MODEL_NAMES
 ENV MODEL_NAMES=$MODEL_NAMES
 ADD preload_model.sh /preload_model.sh
-# Install bash if not present in the new base image (ollama images usually have it)
-# RUN apt-get update && apt-get install -y bash 
+# Ensure bash is available in the new base image if needed by preload_model.sh
+# RUN apk add bash # For Alpine-based ollama images
 RUN chmod +x /preload_model.sh && /preload_model.sh
 
 # Stage 2: Copy the model to the volume
-# Use the same updated base image for consistency, or a minimal runtime image if preferred
-FROM ollama/ollama:0.9.6 # <--- CHANGE THIS LINE AS WELL
+FROM ollama/ollama:0.9.6 # Consistent base image for the final layer
 COPY --from=0 /runpod-volume /runpod-volume
